--- a/appZapp/__demo/appking-story/app/styles/app.scss
+++ b/appZapp/__demo/appking-story/app/styles/app.scss
@@ -19,6 +19,9 @@
 
 @import "../../../../app/styles/app_core/01-core-constructor";
 @import "../../../../app/styles/app_core/02-core-variables";
+
+$fontSize: 20px;
+
 @import "../../../../app/styles/app_core/03-core-html-markup";
 @import "../../../../app/styles/app_core/04-core-typography";
 
