--- a/appZapp/app/styles/app_core/02-core-variables.scss
+++ b/appZapp/app/styles/app_core/02-core-variables.scss
@@ -6,6 +6,8 @@
 
 //* ------------------------------------ padding system
 
+$remSize: 10px;
+
 $dim:           0.8rem; // design unit
 $margin-min:    1*$dim;
 $margin-def:    3*$dim;
@@ -20,6 +22,14 @@ $color_main_shadow:    rgba(0,0,0,0.1);
 $color_use_red:        hsla(  1, 66%, 84%, 1);
 $color_use_green:      hsla( 78, 49%, 83%, 1);
 $color_use_blue:       hsla(177, 42%, 76%, 1);
+
+//* ------------------------------------ font-depended variables
+
+
+$fontSize:     16px;
+$fontRegular:  400;
+$fontSemibold: 400;
+$fontBolder:   700;
 
 //* ------------------------------------ screen sizes
 
