--- a/appZapp/__demo/appking-story/app/styles/chapters.scss
+++ b/appZapp/__demo/appking-story/app/styles/chapters.scss
@@ -3,10 +3,10 @@
 
 $one-space: 4*$dim;
 
-.scene {
-    @extend .zetka-layer;
-    @include has-illustrated-background;
-}
+// ------------------------------- color palette
+$color-FunnyLikeTheSpace: hsla(201, 65%, 6%, 1); /* Funny Like the Space */
+$color-MatrixText: limegreen;
+
 .is-invisible {
     opacity: 0;
 }
@@ -18,6 +18,7 @@ $one-space: 4*$dim;
     @extend .has-v-slices;
     padding-bottom: 4em;
 }
+
         .el-dialog {
             padding:       1em;
             border-radius: 0.5em;
@@ -35,12 +36,30 @@ $one-space: 4*$dim;
             background-color: hsla(200,64%,62%,1);
         }
 
+
+.matrix-code-layer {
+
+    @extend .zetka-layer;
+    @extend .has-v-slices;
+
+    padding-top:    20vh;
+    padding-bottom: 20vh;
+    margin-top:     20vh;
+    margin-bottom:  40vh;
+
+    background-color: $color-FunnyLikeTheSpace;
+    color:            $color-MatrixText;
+    @extend .has-sans-text;
+
+    .span1 { padding-left: 1em; }
+    .span2 { padding-left: 2em; }
+    .span3 { padding-left: 3em; }
+}
+
 // -----------------------------------------------
 
-
-.scene-action--what-content-is {
-    margin-top: 20vh;
-}
+/* shaped top and bottom */
+/*clip-path: polygon( 0 2em, 10% 1em, 36% 2em, 55% 0, 100% 2em, 100% 100%, 55% calc( 100% - 2em ), 36% 100%, 10% calc( 100% - 1em ), 0 100% );*/
 
 // -----------------------------------------------
 
