--- a/appZapp/app/styles/components/layout-fullscreen/layout-fullscreen.scss
+++ b/appZapp/app/styles/components/layout-fullscreen/layout-fullscreen.scss
@@ -7,9 +7,9 @@
 /* html template
 
     <section class="fullscreen">
-        <header class="fullscreen-header"></header>
-        <div    class="fullscreen-body"  ></div>
-        <footer class="fullscreen-footer"></footer>
+        <div class="fullscreen-header"></div>
+        <div class="fullscreen-body"  ></div>
+        <div class="fullscreen-footer"></div>
     </section>
 
 */
@@ -38,6 +38,7 @@
     .fullscreen-footer { order: 3; flex-grow: 0; }
 
     /* contentbox--xy-centered */
+    .fullscreen-header,
     .fullscreen-body,
     .fullscreen-footer {
         display:         flex;
