--- a/appZapp/app/styles/app.css
+++ b/appZapp/app/styles/app.css
@@ -893,7 +893,7 @@ $zetka-half-screen-two                    in][][][side][]-
  */
 /* Document
    ========================================================================== */
-html[sakura] {
+html[sakura], html.sakura {
   font-family: sans-serif;
   /* 1 */
   line-height: 1.15;
@@ -905,7 +905,7 @@ html[sakura] {
 
 /* Sections
    ========================================================================== */
-html[sakura] {
+[sakura], .sakura {
   /**
    * Remove the margin in all browsers (opinionated).
    */
@@ -1060,97 +1060,115 @@ html[sakura] {
   /**
    * Add the correct display in IE.
    */ }
-  html[sakura] body {
+  [sakura] body, .sakura body {
     margin: 0; }
-  html[sakura] article,
-  html[sakura] aside,
-  html[sakura] footer,
-  html[sakura] header,
-  html[sakura] nav,
-  html[sakura] section {
+  [sakura] article, .sakura article,
+  [sakura] aside,
+  .sakura aside,
+  [sakura] footer,
+  .sakura footer,
+  [sakura] header,
+  .sakura header,
+  [sakura] nav,
+  .sakura nav,
+  [sakura] section,
+  .sakura section {
     display: block; }
-  html[sakura] h1 {
+  [sakura] h1, .sakura h1 {
     font-size: 2em;
     margin: 0.67em 0; }
-  html[sakura] figcaption,
-  html[sakura] figure,
-  html[sakura] main {
+  [sakura] figcaption, .sakura figcaption,
+  [sakura] figure,
+  .sakura figure,
+  [sakura] main,
+  .sakura main {
     /* 1 */
     display: block; }
-  html[sakura] figure {
+  [sakura] figure, .sakura figure {
     margin: 1em 40px; }
-  html[sakura] hr {
+  [sakura] hr, .sakura hr {
     box-sizing: content-box;
     /* 1 */
     height: 0;
     /* 1 */
     overflow: visible;
     /* 2 */ }
-  html[sakura] pre {
+  [sakura] pre, .sakura pre {
     font-family: monospace, monospace;
     /* 1 */
     font-size: 1em;
     /* 2 */ }
-  html[sakura] a {
+  [sakura] a, .sakura a {
     background-color: transparent;
     /* 1 */
     -webkit-text-decoration-skip: objects;
     /* 2 */ }
-  html[sakura] a:active,
-  html[sakura] a:hover {
+  [sakura] a:active, .sakura a:active,
+  [sakura] a:hover,
+  .sakura a:hover {
     outline-width: 0; }
-  html[sakura] abbr[title] {
+  [sakura] abbr[title], .sakura abbr[title] {
     border-bottom: none;
     /* 1 */
     text-decoration: underline;
     /* 2 */
     text-decoration: underline dotted;
     /* 2 */ }
-  html[sakura] b,
-  html[sakura] strong {
+  [sakura] b, .sakura b,
+  [sakura] strong,
+  .sakura strong {
     font-weight: inherit; }
-  html[sakura] b,
-  html[sakura] strong {
+  [sakura] b, .sakura b,
+  [sakura] strong,
+  .sakura strong {
     font-weight: bolder; }
-  html[sakura] code,
-  html[sakura] kbd,
-  html[sakura] samp {
+  [sakura] code, .sakura code,
+  [sakura] kbd,
+  .sakura kbd,
+  [sakura] samp,
+  .sakura samp {
     font-family: monospace, monospace;
     /* 1 */
     font-size: 1em;
     /* 2 */ }
-  html[sakura] dfn {
+  [sakura] dfn, .sakura dfn {
     font-style: italic; }
-  html[sakura] mark {
+  [sakura] mark, .sakura mark {
     background-color: #ff0;
     color: #000; }
-  html[sakura] small {
+  [sakura] small, .sakura small {
     font-size: 80%; }
-  html[sakura] sub,
-  html[sakura] sup {
+  [sakura] sub, .sakura sub,
+  [sakura] sup,
+  .sakura sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
     vertical-align: baseline; }
-  html[sakura] sub {
+  [sakura] sub, .sakura sub {
     bottom: -0.25em; }
-  html[sakura] sup {
+  [sakura] sup, .sakura sup {
     top: -0.5em; }
-  html[sakura] audio,
-  html[sakura] video {
+  [sakura] audio, .sakura audio,
+  [sakura] video,
+  .sakura video {
     display: inline-block; }
-  html[sakura] audio:not([controls]) {
+  [sakura] audio:not([controls]), .sakura audio:not([controls]) {
     display: none;
     height: 0; }
-  html[sakura] img {
+  [sakura] img, .sakura img {
     border-style: none; }
-  html[sakura] svg:not(:root) {
+  [sakura] svg:not(:root), .sakura svg:not(:root) {
     overflow: hidden; }
-  html[sakura] button,
-  html[sakura] input,
-  html[sakura] optgroup,
-  html[sakura] select,
-  html[sakura] textarea {
+  [sakura] button, .sakura button,
+  [sakura] input,
+  .sakura input,
+  [sakura] optgroup,
+  .sakura optgroup,
+  [sakura] select,
+  .sakura select,
+  [sakura] textarea,
+  .sakura textarea {
     font-family: sans-serif;
     /* 1 */
     font-size: 100%;
@@ -1159,36 +1177,47 @@ html[sakura] {
     /* 1 */
     margin: 0;
     /* 2 */ }
-  html[sakura] button,
-  html[sakura] input {
+  [sakura] button, .sakura button,
+  [sakura] input,
+  .sakura input {
     /* 1 */
     overflow: visible; }
-  html[sakura] button,
-  html[sakura] select {
+  [sakura] button, .sakura button,
+  [sakura] select,
+  .sakura select {
     /* 1 */
     text-transform: none; }
-  html[sakura] button,
-  html[sakura] html [type="button"],
-  html[sakura] [type="reset"],
-  html[sakura] [type="submit"] {
+  [sakura] button, .sakura button,
+  [sakura] html [type="button"],
+  .sakura html [type="button"],
+  [sakura] [type="reset"],
+  .sakura [type="reset"],
+  [sakura] [type="submit"],
+  .sakura [type="submit"] {
     -webkit-appearance: button;
     /* 2 */ }
-  html[sakura] button::-moz-focus-inner,
-  html[sakura] [type="button"]::-moz-focus-inner,
-  html[sakura] [type="reset"]::-moz-focus-inner,
-  html[sakura] [type="submit"]::-moz-focus-inner {
+  [sakura] button::-moz-focus-inner, .sakura button::-moz-focus-inner,
+  [sakura] [type="button"]::-moz-focus-inner,
+  .sakura [type="button"]::-moz-focus-inner,
+  [sakura] [type="reset"]::-moz-focus-inner,
+  .sakura [type="reset"]::-moz-focus-inner,
+  [sakura] [type="submit"]::-moz-focus-inner,
+  .sakura [type="submit"]::-moz-focus-inner {
     border-style: none;
     padding: 0; }
-  html[sakura] button:-moz-focusring,
-  html[sakura] [type="button"]:-moz-focusring,
-  html[sakura] [type="reset"]:-moz-focusring,
-  html[sakura] [type="submit"]:-moz-focusring {
+  [sakura] button:-moz-focusring, .sakura button:-moz-focusring,
+  [sakura] [type="button"]:-moz-focusring,
+  .sakura [type="button"]:-moz-focusring,
+  [sakura] [type="reset"]:-moz-focusring,
+  .sakura [type="reset"]:-moz-focusring,
+  [sakura] [type="submit"]:-moz-focusring,
+  .sakura [type="submit"]:-moz-focusring {
     outline: 1px dotted ButtonText; }
-  html[sakura] fieldset {
+  [sakura] fieldset, .sakura fieldset {
     border: 1px solid #c0c0c0;
     margin: 0 2px;
     padding: 0.35em 0.625em 0.75em; }
-  html[sakura] legend {
+  [sakura] legend, .sakura legend {
     box-sizing: border-box;
     /* 1 */
     color: inherit;
@@ -1201,43 +1230,47 @@ html[sakura] {
     /* 3 */
     white-space: normal;
     /* 1 */ }
-  html[sakura] progress {
+  [sakura] progress, .sakura progress {
     display: inline-block;
     /* 1 */
     vertical-align: baseline;
     /* 2 */ }
-  html[sakura] textarea {
+  [sakura] textarea, .sakura textarea {
     overflow: auto; }
-  html[sakura] [type="checkbox"],
-  html[sakura] [type="radio"] {
+  [sakura] [type="checkbox"], .sakura [type="checkbox"],
+  [sakura] [type="radio"],
+  .sakura [type="radio"] {
     box-sizing: border-box;
     /* 1 */
     padding: 0;
     /* 2 */ }
-  html[sakura] [type="number"]::-webkit-inner-spin-button,
-  html[sakura] [type="number"]::-webkit-outer-spin-button {
+  [sakura] [type="number"]::-webkit-inner-spin-button, .sakura [type="number"]::-webkit-inner-spin-button,
+  [sakura] [type="number"]::-webkit-outer-spin-button,
+  .sakura [type="number"]::-webkit-outer-spin-button {
     height: auto; }
-  html[sakura] [type="search"] {
+  [sakura] [type="search"], .sakura [type="search"] {
     -webkit-appearance: textfield;
     /* 1 */
     outline-offset: -2px;
     /* 2 */ }
-  html[sakura] [type="search"]::-webkit-search-cancel-button,
-  html[sakura] [type="search"]::-webkit-search-decoration {
+  [sakura] [type="search"]::-webkit-search-cancel-button, .sakura [type="search"]::-webkit-search-cancel-button,
+  [sakura] [type="search"]::-webkit-search-decoration,
+  .sakura [type="search"]::-webkit-search-decoration {
     -webkit-appearance: none; }
-  html[sakura] ::-webkit-file-upload-button {
+  [sakura] ::-webkit-file-upload-button, .sakura ::-webkit-file-upload-button {
     -webkit-appearance: button;
     /* 1 */
     font: inherit;
     /* 2 */ }
-  html[sakura] details,
-  html[sakura] menu {
+  [sakura] details, .sakura details,
+  [sakura] menu,
+  .sakura menu {
     display: block; }
-  html[sakura] summary {
+  [sakura] summary, .sakura summary {
     display: list-item; }
-  html[sakura] canvas {
+  [sakura] canvas, .sakura canvas {
     display: inline-block; }
-  html[sakura] template {
+  [sakura] template, .sakura template {
     display: none; }
 
 /* Hidden
@@ -1254,15 +1287,15 @@ html[sakura] {
  * Project: https://github.com/oxalorg/sakura
  */
 /* Body */
-html[sakura] {
+html[sakura], html.sakura {
   font-size: 62.5%;
   font-family: serif; }
 
-html[sakura] {
+[sakura], .sakura {
   /* Pre and Code */
   /* Tables */
   /* Buttons, forms and input */ }
-  html[sakura] body {
+  [sakura] body, .sakura body {
     font-size: 1.8rem;
     line-height: 1.618;
     max-width: 38em;
@@ -1271,12 +1304,12 @@ html[sakura] {
     background-color: #f9f9f9;
     padding: 13px; }
   @media (max-width: 684px) {
-    html[sakura] body {
+    [sakura] body, .sakura body {
       font-size: 1.53rem; } }
   @media (max-width: 382px) {
-    html[sakura] body {
+    [sakura] body, .sakura body {
       font-size: 1.35rem; } }
-  html[sakura] h1, html[sakura] h2, html[sakura] h3, html[sakura] h4, html[sakura] h5, html[sakura] h6 {
+  [sakura] h1, .sakura h1, [sakura] h2, .sakura h2, [sakura] h3, .sakura h3, [sakura] h4, .sakura h4, [sakura] h5, .sakura h5, [sakura] h6, .sakura h6 {
     line-height: 1.1;
     font-family: Verdana, Geneva, sans-serif;
     font-weight: 700;
@@ -1288,67 +1321,67 @@ html[sakura] {
     -moz-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
-  html[sakura] h1 {
+  [sakura] h1, .sakura h1 {
     font-size: 2.35em; }
-  html[sakura] h2 {
+  [sakura] h2, .sakura h2 {
     font-size: 2.00em; }
-  html[sakura] h3 {
+  [sakura] h3, .sakura h3 {
     font-size: 1.75em; }
-  html[sakura] h4 {
+  [sakura] h4, .sakura h4 {
     font-size: 1.5em; }
-  html[sakura] h5 {
+  [sakura] h5, .sakura h5 {
     font-size: 1.25em; }
-  html[sakura] h6 {
+  [sakura] h6, .sakura h6 {
     font-size: 1em; }
-  html[sakura] small, html[sakura] sub, html[sakura] sup {
+  [sakura] small, .sakura small, [sakura] sub, .sakura sub, [sakura] sup, .sakura sup {
     font-size: 75%; }
-  html[sakura] hr {
+  [sakura] hr, .sakura hr {
     border-color: #2c8898; }
-  html[sakura] a {
+  [sakura] a, .sakura a {
     text-decoration: none;
     color: #2c8898; }
-  html[sakura] a:hover {
+  [sakura] a:hover, .sakura a:hover {
     color: #982c61;
     border-bottom: 2px solid #4a4a4a; }
-  html[sakura] ul {
+  [sakura] ul, .sakura ul {
     padding-left: 1.4em; }
-  html[sakura] li {
+  [sakura] li, .sakura li {
     margin-bottom: 0.4em; }
-  html[sakura] blockquote {
+  [sakura] blockquote, .sakura blockquote {
     font-style: italic;
     margin-left: 1.5em;
     padding-left: 1em;
     border-left: 3px solid #2c8898; }
-  html[sakura] img {
+  [sakura] img, .sakura img {
     max-width: 100%; }
-  html[sakura] pre {
+  [sakura] pre, .sakura pre {
     background-color: #f1f1f1;
     display: block;
     padding: 1em;
     overflow-x: auto; }
-  html[sakura] code {
+  [sakura] code, .sakura code {
     font-size: 0.9em;
     padding: 0 0.5em;
     background-color: #f1f1f1;
     white-space: pre-wrap; }
-  html[sakura] pre > code {
+  [sakura] pre > code, .sakura pre > code {
     padding: 0;
     background-color: transparent;
     white-space: pre; }
-  html[sakura] table {
+  [sakura] table, .sakura table {
     text-align: justify;
     width: 100%;
     border-collapse: collapse; }
-  html[sakura] td, html[sakura] th {
+  [sakura] td, .sakura td, [sakura] th, .sakura th {
     padding: 0.5em;
     border-bottom: 1px solid #f1f1f1; }
-  html[sakura] input, html[sakura] textarea {
+  [sakura] input, .sakura input, [sakura] textarea, .sakura textarea {
     border: 1px solid #4a4a4a; }
-  html[sakura] input:focus, html[sakura] textarea:focus {
+  [sakura] input:focus, .sakura input:focus, [sakura] textarea:focus, .sakura textarea:focus {
     border: 1px solid #2c8898; }
-  html[sakura] textarea {
+  [sakura] textarea, .sakura textarea {
     width: 100%; }
-  html[sakura] .button, html[sakura] button, html[sakura] input[type="submit"], html[sakura] input[type="reset"], html[sakura] input[type="button"] {
+  [sakura] .button, .sakura .button, [sakura] button, .sakura button, [sakura] input[type="submit"], .sakura input[type="submit"], [sakura] input[type="reset"], .sakura input[type="reset"], [sakura] input[type="button"], .sakura input[type="button"] {
     display: inline-block;
     padding: 5px 10px;
     text-align: center;
@@ -1360,15 +1393,15 @@ html[sakura] {
     border: 1px solid #2c8898;
     cursor: pointer;
     box-sizing: border-box; }
-  html[sakura] .button[disabled], html[sakura] button[disabled], html[sakura] input[type="submit"][disabled], html[sakura] input[type="reset"][disabled], html[sakura] input[type="button"][disabled] {
+  [sakura] .button[disabled], .sakura .button[disabled], [sakura] button[disabled], .sakura button[disabled], [sakura] input[type="submit"][disabled], .sakura input[type="submit"][disabled], [sakura] input[type="reset"][disabled], .sakura input[type="reset"][disabled], [sakura] input[type="button"][disabled], .sakura input[type="button"][disabled] {
     cursor: default;
     opacity: .5; }
-  html[sakura] .button:focus, html[sakura] .button:hover, html[sakura] button:focus, html[sakura] button:hover, html[sakura] input[type="submit"]:focus, html[sakura] input[type="submit"]:hover, html[sakura] input[type="reset"]:focus, html[sakura] input[type="reset"]:hover, html[sakura] input[type="button"]:focus, html[sakura] input[type="button"]:hover {
+  [sakura] .button:focus, .sakura .button:focus, [sakura] .button:hover, .sakura .button:hover, [sakura] button:focus, .sakura button:focus, [sakura] button:hover, .sakura button:hover, [sakura] input[type="submit"]:focus, .sakura input[type="submit"]:focus, [sakura] input[type="submit"]:hover, .sakura input[type="submit"]:hover, [sakura] input[type="reset"]:focus, .sakura input[type="reset"]:focus, [sakura] input[type="reset"]:hover, .sakura input[type="reset"]:hover, [sakura] input[type="button"]:focus, .sakura input[type="button"]:focus, [sakura] input[type="button"]:hover, .sakura input[type="button"]:hover {
     background-color: #982c61;
     border-color: #982c61;
     color: #f9f9f9;
     outline: 0; }
-  html[sakura] textarea, html[sakura] select, html[sakura] input[type] {
+  [sakura] textarea, .sakura textarea, [sakura] select, .sakura select, [sakura] input[type], .sakura input[type] {
     color: #4a4a4a;
     padding: 6px 10px;
     /* The 6px vertically centers text on FF, ignored by Webkit */
@@ -1378,12 +1411,12 @@ html[sakura] {
     border-radius: 4px;
     box-shadow: none;
     box-sizing: border-box; }
-  html[sakura] textarea:focus, html[sakura] select:focus, html[sakura] input[type]:focus {
+  [sakura] textarea:focus, .sakura textarea:focus, [sakura] select:focus, .sakura select:focus, [sakura] input[type]:focus, .sakura input[type]:focus {
     border: 1px solid #2c8898;
     outline: 0; }
-  html[sakura] input[type="checkbox"]:focus {
+  [sakura] input[type="checkbox"]:focus, .sakura input[type="checkbox"]:focus {
     outline: 1px dotted #2c8898; }
-  html[sakura] label, html[sakura] legend, html[sakura] fieldset {
+  [sakura] label, .sakura label, [sakura] legend, .sakura legend, [sakura] fieldset, .sakura fieldset {
     display: block;
     margin-bottom: .5rem;
     font-weight: 600; }
@@ -1392,7 +1425,7 @@ html[sakura] {
     zl append sakura
     v2018.8.26
 */
-html[sakura] {
+html[sakura], html.sakura {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
@@ -1400,15 +1433,17 @@ html[sakura] {
 *, *::before, *::after {
   box-sizing: inherit; }
 
-html[sakura] body {
+[sakura] body, .sakura body {
   margin: 0;
   padding: 0;
   max-width: 100%; }
-html[sakura] img, html[sakura] svg {
+[sakura] img, .sakura img, [sakura] svg, .sakura svg {
   max-width: 100%; }
-html[sakura] figure {
+[sakura] figure, .sakura figure {
   margin-left: 0;
   margin-right: 0; }
+[sakura] p, .sakura p {
+  margin: 1em 0; }
 
 /*
     MOD: Centered content column
@@ -1475,65 +1510,4 @@ html[sakura] figure {
     padding: 0.5em; }
 
 /* eof base html markup */
-/* zApp Sass Core *
-// ---------------------------------------------------------------
-
-@import "app_core/01-core-constructor";
-@import "app_core/02-core-variables";
-@import "app_core/03-core-html-markup";
-@import "app_core/04-core-typography";
-
-
-// ---------------------------------------------------------------
-/* zApp hi levels */
-/* ==============================================================
-    univeral markup helpers
-    2019.2.8
-============================================================== */
-/* ------------------------------------------ univeral helpers */
-.is-centered {
-  text-align: center;
-  justify-content: center; }
-
-.is-v-centered {
-  align-self: center; }
-
-.has-v-centered > * {
-  align-self: center; }
-
-.is-v-equal {
-  align-self: stretch; }
-
-.has-v-equal > * {
-  align-self: stretch; }
-
-.has-v-slices {
-  grid-row-gap: 0; }
-
-.is-v-spaced {
-  margin-top: 2.4rem;
-  margin-bottom: 2.4rem; }
-
-.is-v-padded {
-  padding-top: 2.4rem;
-  padding-bottom: 2.4rem; }
-
-.is-box {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  background-color: rgba(0, 0, 0, 0.1); }
-
-.layer {
-  display: block;
-  grid-column: full; }
-  .zetka .layer {
-    grid-column: full; }
-
-/* ------------------------------------------ compact mode helpers */
-@media (max-width: 600px) {
-  .compact-mode--is-centered {
-    text-align: center;
-    justify-content: center; } }
-
-/* eof univeral markup helpers */
 /* EOF sass ordnung */
